--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               The responsibility for importing goods lies solely on the
               importer, and the potential ...
             </p>
-            <button class="text-blue-600 font-bold mt-4">Read More</button>
+           <a href="services.html#tradeconsult"> <button class="text-blue-600 font-bold mt-4">Read More</button></a>
           </div>
         </div>
         <!-- card 2 -->
@@ -226,7 +226,7 @@
               Finance provides buyers more time to pay their imports and prepare
               buyers' order...
             </p>
-            <button class="text-blue-600 font-bold mt-4">Read More</button>
+            <a href="services.html#impandexp"><button class="text-blue-600 font-bold mt-4">Read More</button></a>
           </div>
         </div>
         <!-- card 3 -->
@@ -244,7 +244,7 @@
               The on-time and cost-efficient movement of products to their final
               destination is the...
             </p>
-            <button class="text-blue-600 font-bold mt-4">Read More</button>
+            <a href="services.html#logistics"><button class="text-blue-600 font-bold mt-4">Read More</button></a>
           </div>
         </div>
         <!-- card 4 -->
@@ -264,7 +264,7 @@
               We provide effective and efficient Trade Services that support the
               day-to-day operation of...
             </p>
-            <button class="text-blue-600 font-bold mt-4">Read More</button>
+            <a href="services.html#end"><button class="text-blue-600 font-bold mt-4">Read More</button></a>
           </div>
         </div>
         <!-- card 5 -->
@@ -282,7 +282,7 @@
               Do you need finance to start your business but don't know how to
               go about it? Don't worry....
             </p>
-            <button class="text-blue-600 font-bold mt-4">Read More</button>
+           <a href="services.html#finance"> <button class="text-blue-600 font-bold mt-4">Read More</button> </a>
           </div>
         </div>
         <!-- card 6-->
@@ -302,7 +302,7 @@
               We partner with high-growth companies to accelerate their ideas to
               market. We can...
             </p>
-            <button class="text-blue-600 font-bold mt-4">Read More</button>
+           <a href="services.html#venture"></a> <button class="text-blue-600 font-bold mt-4">Read More</button>
           </div>
         </div>
       </div>
@@ -314,7 +314,7 @@
         <h1 class="text-3xl text-blue-700 font-bold mb-10 text-center">
           Why Choose MGT?
         </h1>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 sm:gap-8">
+        <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 gap-6 sm:gap-8">
           <!-- item -->
           <div
             class="flex flex-wrap items-center  gap-4 sm:gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
@@ -378,46 +378,46 @@
       </div>
     </div>
     <!-- stats -->
-    <div class="bg-blue-300 px-4 py-16 shadow-md">
-      <h2 class="text-3xl font-extrabold text-center mb-12 text-blue-800">
-        Key Metrics at a Glance
-      </h2>
-      <div class="grid sm:grid-cols-1 lg:grid-cols-3 gap-7 mx-20 lg:mx-32">
-        <!-- Card 1 -->
-        <div class="text-center p-20 bg-white rounded-lg shadow-md relative">
-          <div
-            class="absolute inset-0 bg-cover bg-center opacity-30 rounded-lg"
-            style="background-image: url('images/logistics.jpg')"
-          ></div>
-          <div class="relative z-10">
-            <h6 class="text-5xl font-bold text-blue-700">50+</h6>
-            <p class="font-bold text-blue-700">Initiated Projects</p>
-          </div>
-        </div>
-        <!-- Card 2 -->
-        <div class="text-center p-20 bg-white rounded-lg shadow-md relative">
-          <div
-            class="absolute inset-0 bg-cover bg-center opacity-30 rounded-lg"
-            style="background-image: url('images/logistics.jpg')"
-          ></div>
-          <div class="relative z-10">
-            <h6 class="text-5xl font-bold text-blue-700">50</h6>
-            <p class="font-bold text-blue-700">Successful Projects</p>
-          </div>
-        </div>
-        <!-- Card 3 -->
-        <div class="text-center p-20 bg-white rounded-lg shadow-md relative">
-          <div
-            class="absolute inset-0 bg-cover bg-center opacity-30 rounded-lg"
-            style="background-image: url('images/logistics.jpg')"
-          ></div>
-          <div class="relative z-10">
-            <h6 class="text-5xl font-bold text-blue-700">30+</h6>
-            <p class="font-bold text-blue-700">Satisfied Customers</p>
-          </div>
-        </div>
+<div class="bg-blue-300 px-4 py-16 shadow-md">
+  <h2 class="text-3xl font-extrabold text-center mb-12 text-blue-800">
+    Key Metrics at a Glance
+  </h2>
+  <div class="grid sm:grid-cols-1 lg:grid-cols-3 gap-7 px-4 md:px-20 lg:px-32">
+    <!-- Card 1 -->
+    <div class="text-center p-10 bg-white rounded-lg shadow-md relative">
+      <div
+        class="absolute inset-0 bg-cover bg-center opacity-30 rounded-lg"
+        style="background-image: url('images/logistics.jpg')"
+      ></div>
+      <div class="relative z-10">
+        <h6 class="text-5xl font-bold text-blue-700">50+</h6>
+        <p class="font-bold text-blue-700">Initiated Projects</p>
       </div>
     </div>
+    <!-- Card 2 -->
+    <div class="text-center p-10 bg-white rounded-lg shadow-md relative">
+      <div
+        class="absolute inset-0 bg-cover bg-center opacity-30 rounded-lg"
+        style="background-image: url('images/logistics.jpg')"
+      ></div>
+      <div class="relative z-10">
+        <h6 class="text-5xl font-bold text-blue-700">50</h6>
+        <p class="font-bold text-blue-700">Successful Projects</p>
+      </div>
+    </div>
+    <!-- Card 3 -->
+    <div class="text-center p-10 bg-white rounded-lg shadow-md relative">
+      <div
+        class="absolute inset-0 bg-cover bg-center opacity-30 rounded-lg"
+        style="background-image: url('images/logistics.jpg')"
+      ></div>
+      <div class="relative z-10">
+        <h6 class="text-5xl font-bold text-blue-700">30+</h6>
+        <p class="font-bold text-blue-700">Satisfied Customers</p>
+      </div>
+    </div>
+  </div>
+</div>
 
     <!-- Clients Section -->
     <div class="bg-blue-600 px-6 py-16">
@@ -545,77 +545,81 @@
       </div>
     </div>
 
-    <!-- footer -->
-    <div
-      class="relative bg-cover bg-center p-8"
-      style="background-image: url('images/global.jpeg')"
-    >
-      <div class="absolute inset-0 bg-black bg-opacity-50"></div>
-
-      <footer
-        class="relative grid grid-cols-1 md:grid-cols-3 gap-4 pb-10 text-white"
-      >
-        <div>
-          <h1 class="text-xl font-bold">Contact Details</h1>
-          <div class="flex mt-5 items-center mb-10">
-            <i class="fa-solid fa-envelope text-3xl"></i>
-            <div class="ml-5 text-lg">
-              <p>enquiries@mgtnigeria.com</p>
-              <p>customercare@mgtnigeria.com</p>
-            </div>
-          </div>
-          <div class="flex items-center mb-10">
-            <i class="fa-solid fa-phone text-3xl"></i>
-            <p class="ml-5 text-lg">+2347033716203</p>
-          </div>
-          <div class="flex items-center mt-5">
-            <i class="fa-solid fa-location-dot text-3xl"></i>
-
-            <p class="ml-5 text-lg">
-              17, Olaniji Street, off Oregun Road, Ikeja, Lagos, Nigeria
-            </p>
-          </div>
-        </div>
-
-        <div class="pl-10">
-          <h1 class="text-xl font-bold">Quick Links</h1>
-          <nav class="flex flex-col text-lg">
-            <a href="index.html" class="mt-5 hover:underline">Home</a>
-            <a href="about.html" class="mt-5 hover:underline">About</a>
-            <a href="services.html" class="mt-5 hover:underline">Services</a>
-            <a href="news.html" class="mt-5 hover:underline">News</a>
-            <a href="contact.html" class="mt-5 hover:underline">Contact</a>
-          </nav>
-        </div>
-        <div>
-          <h1 class="text-xl font-bold">Keep in Touch</h1>
-
-          <input
-            type="email"
-            placeholder="enter your email..."
-            class="my-8 py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
-          />
-          <div class="relative">
-            <input
-              type="text"
-              placeholder="Enter your message..."
-              class="w-full py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
-            />
-            <button
-              class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white p-2 rounded-full hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
-            >
-              <i class="fa-solid fa-paper-plane"></i>
-            </button>
-          </div>
-        </div>
-      </footer>
-      <p
-        class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white"
-      >
-        © <span id="year"></span> Madoms Global Trade. All rights reserved.
-      </p>
-    </div>
-
+       <!-- Footer -->
+       <div
+       class="relative bg-cover bg-center p-8"
+       style="background-image: url('images/global.jpeg')"
+     >
+       <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+ 
+       <footer
+         class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 pb-10 text-white"
+       >
+         <!-- Contact Details -->
+         <div>
+           <h1 class="text-xl font-bold">Contact Details</h1>
+           <div class="flex mt-5 items-start mb-8">
+             <i class="fa-solid fa-envelope text-3xl"></i>
+             <div class="ml-4 text-lg">
+               <p>enquiries@mgtnigeria.com</p>
+               <p>customercare@mgtnigeria.com</p>
+             </div>
+           </div>
+           <div class="flex items-center mb-8">
+             <i class="fa-solid fa-phone text-3xl"></i>
+             <p class="ml-4 text-lg">+2347033716203</p>
+           </div>
+           <div class="flex items-start">
+             <i class="fa-solid fa-location-dot text-3xl"></i>
+             <p class="ml-4 text-lg">
+               17, Olaniji Street, off Oregun Road, Ikeja, Lagos, Nigeria
+             </p>
+           </div>
+         </div>
+ 
+         <!-- Quick Links -->
+         <div>
+           <h1 class="text-xl font-bold">Quick Links</h1>
+           <nav class="flex flex-col text-lg">
+             <a href="index.html" class="mt-5 hover:underline">Home</a>
+             <a href="about.html" class="mt-5 hover:underline">About</a>
+             <a href="services.html" class="mt-5 hover:underline">Services</a>
+             <a href="news.html" class="mt-5 hover:underline">News</a>
+             <a href="contact.html" class="mt-5 hover:underline">Contact</a>
+           </nav>
+         </div>
+ 
+         <!-- Keep in Touch -->
+         <div class="mb-8 sm:mb-0">
+           <h1 class="text-xl font-bold">Keep in Touch</h1>
+           <input
+             type="email"
+             placeholder="Enter your email..."
+             class="block py-3 px-4 my-6 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+           />
+           <div class="relative">
+             <input
+               type="text"
+               placeholder="Enter your message..."
+               class="w-full max-w-md py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 mx-auto"
+             />
+             <button
+               class="absolute right-3 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white p-2 rounded-full hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
+             >
+               <i class="fa-solid fa-paper-plane"></i>
+             </button>
+           </div>
+         </div>
+       </footer>
+ 
+       <!-- Footer Bottom -->
+       <p
+         class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white mt-8"
+       >
+         © <span id="year"></span> Madoms Global Trade. All rights reserved.
+       </p>
+     </div>
+ 
     <script src="script.js"></script>
   </body>
 </html>
