--- a/about.html
+++ b/about.html
@@ -404,7 +404,7 @@
         </div>
       </div>
     </div>
-    <!-- footer -->
+    <!-- Footer -->
     <div
       class="relative bg-cover bg-center p-8"
       style="background-image: url('images/global.jpeg')"
@@ -412,31 +412,32 @@
       <div class="absolute inset-0 bg-black bg-opacity-50"></div>
 
       <footer
-        class="relative grid grid-cols-1 md:grid-cols-3 gap-4 pb-10 text-white"
+        class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 pb-10 text-white"
       >
+        <!-- Contact Details -->
         <div>
           <h1 class="text-xl font-bold">Contact Details</h1>
-          <div class="flex mt-5 items-center mb-10">
+          <div class="flex mt-5 items-start mb-8">
             <i class="fa-solid fa-envelope text-3xl"></i>
-            <div class="ml-5 text-lg">
+            <div class="ml-4 text-lg">
               <p>enquiries@mgtnigeria.com</p>
               <p>customercare@mgtnigeria.com</p>
             </div>
           </div>
-          <div class="flex items-center mb-10">
+          <div class="flex items-center mb-8">
             <i class="fa-solid fa-phone text-3xl"></i>
-            <p class="ml-5 text-lg">+2347033716203</p>
+            <p class="ml-4 text-lg">+2347033716203</p>
           </div>
-          <div class="flex items-center mt-5">
+          <div class="flex items-start">
             <i class="fa-solid fa-location-dot text-3xl"></i>
-
-            <p class="ml-5 text-lg">
+            <p class="ml-4 text-lg">
               17, Olaniji Street, off Oregun Road, Ikeja, Lagos, Nigeria
             </p>
           </div>
         </div>
 
-        <div class="pl-10">
+        <!-- Quick Links -->
+        <div>
           <h1 class="text-xl font-bold">Quick Links</h1>
           <nav class="flex flex-col text-lg">
             <a href="index.html" class="mt-5 hover:underline">Home</a>
@@ -446,30 +447,33 @@
             <a href="contact.html" class="mt-5 hover:underline">Contact</a>
           </nav>
         </div>
-        <div>
-          <h1 class="text-xl font-bold">Keep in Touch</h1>
 
+        <!-- Keep in Touch -->
+        <div class="mb-8 sm:mb-0">
+          <h1 class="text-xl font-bold">Keep in Touch</h1>
           <input
             type="email"
-            placeholder="enter your email..."
-            class="my-8 py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+            placeholder="Enter your email..."
+            class="block py-3 px-4 my-6 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
           />
           <div class="relative">
             <input
               type="text"
               placeholder="Enter your message..."
-              class="w-full py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+              class="w-full max-w-md py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 mx-auto"
             />
             <button
-              class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white p-2 rounded-full hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
+              class="absolute right-3 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white p-2 rounded-full hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
             >
               <i class="fa-solid fa-paper-plane"></i>
             </button>
           </div>
         </div>
       </footer>
+
+      <!-- Footer Bottom -->
       <p
-        class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white"
+        class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white mt-8"
       >
         © <span id="year"></span> Madoms Global Trade. All rights reserved.
       </p>
