--- a/news.html
+++ b/news.html
@@ -104,93 +104,93 @@
         News and Events
       </h1>
     </div>
-    <!-- main -->
-    <div class="bg-gray-100 py-16">
-      <div class="max-w-7xl mx-auto px-4">
-        <h2 class="text-3xl font-extrabold text-center text-blue-800 mb-12">
+    <!-- Main Section -->
+    <div class="bg-gray-100 px-4 py-16">
+      <div class="max-w-7xl mx-auto">
+        <!-- Section Title -->
+        <h2 class="text-3xl font-extrabold text-center text-blue-800">
           Upcoming Events and News
         </h2>
 
         <!-- Events Grid -->
         <div
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 mx-32"
+          class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-12"
         >
           <!-- Event 1 -->
-          <div class="bg-white p-6 rounded-lg shadow-md">
+          <div class="bg-white p-6 rounded-lg shadow-md overflow-hidden">
             <div class="flex gap-3 items-center mb-2">
               <i class="fa-solid fa-calendar-days"></i>
-
-              <span class="block text-sm font-medium text-gray-500"
-                >January 15, 2024</span
-              >
+              <span class="block text-sm font-medium text-gray-500">
+                January 15, 2024
+              </span>
             </div>
             <h3 class="text-xl font-semibold text-blue-700 mb-4">
               New Product Launch
             </h3>
-            <p class="text-gray-600 mb-4">
+            <p class="text-gray-600">
               Join us for the launch of our new product, packed with exciting
               features!
             </p>
           </div>
+
           <!-- Event 2 -->
-          <div class="bg-white p-6 rounded-lg shadow-md">
+          <div class="bg-white p-6 rounded-lg shadow-md overflow-hidden">
             <div class="flex gap-3 items-center mb-2">
               <i class="fa-solid fa-calendar-days"></i>
-              <span class="block text-sm font-medium text-gray-500"
-                >December 28, 2024</span
-              >
+              <span class="block text-sm font-medium text-gray-500">
+                December 28, 2024
+              </span>
             </div>
-
             <h3 class="text-xl font-semibold text-blue-700 mb-4">
               Annual General Meeting
             </h3>
-            <p class="text-gray-600 mb-4">
+            <p class="text-gray-600">
               Our AGM will discuss the company's yearly performance and future
               strategies.
             </p>
           </div>
+
           <!-- Event 3 -->
-          <div class="bg-white p-6 rounded-lg shadow-md">
+          <div class="bg-white p-6 rounded-lg shadow-md overflow-hidden">
             <div class="flex gap-3 items-center mb-2">
               <i class="fa-solid fa-calendar-days"></i>
-              <span class="block text-sm font-medium text-gray-500"
-                >March 15, 2025</span
-              >
+              <span class="block text-sm font-medium text-gray-500">
+                March 15, 2025
+              </span>
             </div>
             <h3 class="text-xl font-semibold text-blue-700 mb-4">
               Webinar on Industry Trends
             </h3>
-            <p class="text-gray-600 mb-4">
+            <p class="text-gray-600">
               A deep dive into current industry trends and what they mean for
               the future.
             </p>
           </div>
         </div>
 
+        <!-- Latest News -->
         <div class="mt-16">
           <h3 class="text-2xl font-extrabold text-center text-blue-800 mb-8">
             Latest News
           </h3>
-          <div class="mx-32">
+          <div class="grid sm:grid-cols-1 md:grid-cols-2 gap-8">
             <!-- News Item 1 -->
-            <div class="bg-white p-6 rounded-lg shadow-md mb-9">
+            <div class="bg-white p-6 rounded-lg shadow-md">
               <h4 class="text-xl font-semibold text-blue-700 mb-2">
                 News Title
               </h4>
-              <p class="text-gray-600"></p>
-              <p class="text-lg text-gray-600">
+              <p class="text-gray-600">
                 Placeholder article. Actual content will be added as soon as
                 it’s ready.
               </p>
-
-              <div class="flex gap-3 items-center mb-2">
+              <div class="flex gap-3 items-center mt-4">
                 <i class="fa-solid fa-calendar-days"></i>
-
-                <span class="block text-sm font-medium text-gray-500"
-                  >January 15, 2024</span
-                >
+                <span class="block text-sm font-medium text-gray-500">
+                  January 15, 2024
+                </span>
               </div>
             </div>
+
             <!-- News Item 2 -->
             <div class="bg-white p-6 rounded-lg shadow-md">
               <h4 class="text-xl font-semibold text-blue-700 mb-2">
@@ -200,87 +200,93 @@
                 Placeholder article. Actual content will be added as soon as
                 it’s ready.
               </p>
-              <div class="flex gap-3 items-center mb-2">
+              <div class="flex gap-3 items-center mt-4">
                 <i class="fa-solid fa-calendar-days"></i>
-                <span class="block text-sm font-medium text-gray-500 mt-2"
-                  >December 18, 2024</span
-                >
+                <span class="block text-sm font-medium text-gray-500">
+                  December 18, 2024
+                </span>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-<!-- footer -->
-<div
-class="relative bg-cover bg-center p-8"
-style="background-image: url('images/global.jpeg')"
->
-<div class="absolute inset-0 bg-black bg-opacity-50"></div>
 
-<footer
-  class="relative grid grid-cols-1 md:grid-cols-3 gap-4 pb-10 text-white"
->
-  <div>
-    <h1 class="text-xl font-bold">Contact Details</h1>
-    <div class="flex mt-5 items-center mb-10">
-      <i class="fa-solid fa-envelope text-3xl"></i>
-      <div class="ml-5 text-lg">
-        <p>enquiries@mgtnigeria.com</p>
-        <p>customercare@mgtnigeria.com</p>
-      </div>
-    </div>
-    <div class="flex items-center mb-10">
-      <i class="fa-solid fa-phone text-3xl"></i>
-      <p class="ml-5 text-lg">+2347033716203</p>
-    </div>
-    <div class="flex items-center mt-5">
-      <i class="fa-solid fa-location-dot text-3xl"></i>
+    <!-- Footer -->
+    <div
+      class="relative bg-cover bg-center p-8"
+      style="background-image: url('images/global.jpeg')"
+    >
+      <div class="absolute inset-0 bg-black bg-opacity-50"></div>
 
-      <p class="ml-5 text-lg">
-        17, Olaniji Street, off Oregun Road, Ikeja, Lagos, Nigeria
-      </p>
-    </div>
-  </div>
-
-  <div class="pl-10">
-    <h1 class="text-xl font-bold">Quick Links</h1>
-    <nav class="flex flex-col text-lg">
-      <a href="index.html" class="mt-5 hover:underline">Home</a>
-      <a href="about.html" class="mt-5 hover:underline">About</a>
-      <a href="services.html" class="mt-5 hover:underline">Services</a>
-      <a href="news.html" class="mt-5 hover:underline">News</a>
-      <a href="contact.html" class="mt-5 hover:underline">Contact</a>
-    </nav>
-  </div>
-  <div>
-    <h1 class="text-xl font-bold">Keep in Touch</h1>
-
-    <input
-      type="email"
-      placeholder="enter your email..."
-      class="my-8 py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
-    />
-    <div class="relative">
-      <input
-        type="text"
-        placeholder="Enter your message..."
-        class="w-full py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
-      />
-      <button
-        class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white p-2 rounded-full hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
+      <footer
+        class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 pb-10 text-white"
       >
-        <i class="fa-solid fa-paper-plane"></i>
-      </button>
-    </div>
-  </div>
-</footer>
+        <!-- Contact Details -->
+        <div>
+          <h1 class="text-xl font-bold">Contact Details</h1>
+          <div class="flex mt-5 items-start mb-8">
+            <i class="fa-solid fa-envelope text-3xl"></i>
+            <div class="ml-4 text-lg">
+              <p>enquiries@mgtnigeria.com</p>
+              <p>customercare@mgtnigeria.com</p>
+            </div>
+          </div>
+          <div class="flex items-center mb-8">
+            <i class="fa-solid fa-phone text-3xl"></i>
+            <p class="ml-4 text-lg">+2347033716203</p>
+          </div>
+          <div class="flex items-start">
+            <i class="fa-solid fa-location-dot text-3xl"></i>
+            <p class="ml-4 text-lg">
+              17, Olaniji Street, off Oregun Road, Ikeja, Lagos, Nigeria
+            </p>
+          </div>
+        </div>
+
+        <!-- Quick Links -->
+        <div>
+          <h1 class="text-xl font-bold">Quick Links</h1>
+          <nav class="flex flex-col text-lg">
+            <a href="index.html" class="mt-5 hover:underline">Home</a>
+            <a href="about.html" class="mt-5 hover:underline">About</a>
+            <a href="services.html" class="mt-5 hover:underline">Services</a>
+            <a href="news.html" class="mt-5 hover:underline">News</a>
+            <a href="contact.html" class="mt-5 hover:underline">Contact</a>
+          </nav>
+        </div>
+
+        <!-- Keep in Touch -->
+        <div class="mb-8 sm:mb-0">
+          <h1 class="text-xl font-bold">Keep in Touch</h1>
+          <input
+            type="email"
+            placeholder="Enter your email..."
+            class="block py-3 px-4 my-6 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
+          <div class="relative">
+            <input
+              type="text"
+              placeholder="Enter your message..."
+              class="w-full max-w-md py-3 px-4 rounded-full text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 mx-auto"
+            />
+            <button
+              class="absolute right-3 top-1/2 transform -translate-y-1/2 bg-blue-500 text-white p-2 rounded-full hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
+            >
+              <i class="fa-solid fa-paper-plane"></i>
+            </button>
+          </div>
+        </div>
+      </footer>
+
+      <!-- Footer Bottom -->
       <p
-        class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white"
+        class="absolute bottom-0 left-0 w-full text-center bg-blue-700 px-5 py-3 text-white mt-8"
       >
         © <span id="year"></span> Madoms Global Trade. All rights reserved.
       </p>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
