--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               We partner with high-growth companies to accelerate their ideas to
               market. We can...
             </p>
-           <a href="services.html#venture"></a> <button class="text-blue-600 font-bold mt-4">Read More</button>
+           <a href="services.html#venture"><button class="text-blue-600 font-bold mt-4">Read More</button></a> 
           </div>
         </div>
       </div>
@@ -314,7 +314,7 @@
         <h1 class="text-3xl text-blue-700 font-bold mb-10 text-center">
           Why Choose MGT?
         </h1>
-        <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 gap-6 sm:gap-8">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 sm:gap-8">
           <!-- item -->
           <div
             class="flex flex-wrap items-center  gap-4 sm:gap-6 mb-6 p-5 bg-blue-900 rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-all"
