--- a/about.html
+++ b/about.html
@@ -151,159 +151,174 @@
 
     <!-- Vision and Mission Section -->
     <div class="bg-blue-300">
-      <div
-        class="mx-6 sm:mx-12 lg:mx-32 grid gap-10 lg:gap-16 lg:grid-cols-2 p-8 sm:p-12 lg:p-20"
-      >
-        <!-- Mission -->
-        <div class="rounded-lg flex gap-6 bg-white p-8 shadow-md">
-          <div class="mt-6 flex-shrink-0">
-            <img
-              src="images/mission.png"
-              alt="Mission Icon"
-              class="w-20 lg:w-24"
-            />
+      <div class="max-w-7xl mx-auto p-8 sm:p-12 lg:p-20">
+        <div class="grid gap-10 lg:gap-16 lg:grid-cols-2">
+          <!-- Mission -->
+          <div class="bg-white rounded-lg shadow-md flex gap-6 p-8">
+            <div class="mt-4 flex-shrink-0">
+              <img
+                src="images/mission.png"
+                alt="Mission Icon"
+                class="w-16 sm:w-20 lg:w-24"
+              />
+            </div>
+            <div class="flex-1">
+              <button
+                class="mb-4 uppercase bg-blue-600 text-white py-2 px-4 text-sm lg:text-base font-semibold rounded-md"
+              >
+                Who we are
+              </button>
+              <h1 class="text-xl lg:text-2xl font-bold mb-4">Our Mission</h1>
+              <p class="text-gray-700 leading-relaxed">
+                Our mission is to use expertise, technology, and networks to
+                become the centre of excellence in financial solutions and also
+                provide our clients with what they need to push their
+                transactions with competitive charges.
+              </p>
+            </div>
           </div>
-          <div class="flex-1">
-            <button
-              class="mb-4 uppercase bg-blue-600 text-white py-2 px-4 text-sm lg:text-base font-semibold rounded-md"
-            >
-              Who we are
-            </button>
-            <h1 class="text-xl lg:text-2xl font-bold mb-4">Our Mission</h1>
-            <p class="text-gray-700 leading-relaxed text-justify">
-              Our mission is to use expertise, technology, and networks to
-              become the centre of excellence in financial solutions and also
-              provide our clients with what they need to push their transactions
-              with competitive charges.
-            </p>
-          </div>
-        </div>
-        <!-- Vision -->
-        <div class="rounded-lg flex gap-6 bg-white p-8 shadow-md">
-          <div class="mt-6 flex-shrink-0">
-            <img
-              src="images/vision.png"
-              alt="Vision Icon"
-              class="w-20 lg:w-24"
-            />
-          </div>
-          <div class="flex-1">
-            <button
-              class="mb-4 uppercase bg-blue-600 text-white py-2 px-4 text-sm lg:text-base font-semibold rounded-md"
-            >
-              What we strive for
-            </button>
-            <h1 class="text-xl lg:text-2xl font-bold mb-4">Our Vision</h1>
-            <p class="text-gray-700 leading-relaxed text-justify">
-              Our vision is to be the most trusted and respected local and
-              global source of financial guidance and solutions. To
-              revolutionize the trade finance business.
-            </p>
+          <!-- Vision -->
+          <div class="bg-white rounded-lg shadow-md flex gap-6 p-8">
+            <div class="mt-4 flex-shrink-0">
+              <img
+                src="images/vision.png"
+                alt="Vision Icon"
+                class="w-16 sm:w-20 lg:w-24"
+              />
+            </div>
+            <div class="flex-1">
+              <button
+                class="mb-4 uppercase bg-blue-600 text-white py-2 px-4 text-sm lg:text-base font-semibold rounded-md"
+              >
+                What we strive for
+              </button>
+              <h1 class="text-xl lg:text-2xl font-bold mb-4">Our Vision</h1>
+              <p class="text-gray-700 leading-relaxed">
+                Our vision is to be the most trusted and respected local and
+                global source of financial guidance and solutions. To
+                revolutionize the trade finance business.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- why choose mgt -->
+    <!-- Why Choose MGT -->
     <div class="bg-[rgba(201,201,178,0.5)]">
-      <div class="mx-16 lg:mx-32 py-10 lg:py-16">
-        <h1 class="text-3xl text-blue-700 font-bold mb-10 text-center">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-20 py-10 lg:py-16">
+        <h1
+          class="text-3xl sm:text-4xl text-blue-700 font-bold mb-12 text-center"
+        >
           Why Choose MGT?
         </h1>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
-          <!-- one -->
+        <div
 
-          <div class="flex mb-6">
-            <div class="flex items-center rounded-s-xl bg-blue-900 w-32">
-              <i class="fa-solid fa-thumbs-up text-8xl text-white"></i>
+          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-10"
+        >
+          <!-- One -->
+          <div class="flex items-stretch">
+            <div
+              class="flex items-center justify-center rounded-s-xl bg-blue-900 w-20 sm:w-24 lg:w-32"
+            >
+              <i
+                class="fa-solid fa-thumbs-up text-5xl sm:text-6xl lg:text-8xl text-white"
+              ></i>
             </div>
             <div
               class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
             >
-              <h2 class="text-xl font-bold text-blue-900 mb-2">
+              <h2 class="text-lg sm:text-xl font-bold text-blue-900 mb-2">
                 We are Trusted
               </h2>
-              <p class="text-lg text-blue-900">
+              <p class="text-sm sm:text-base text-blue-900">
                 Our clients trust us for delivering quality as we are built on
                 integrity and reliability.
               </p>
             </div>
           </div>
-          <!-- two -->
-          <div class="flex mb-6">
+          <!-- Two -->
+          <div class="flex items-stretch">
             <div
-              class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
+              class="flex items-center justify-center rounded-s-xl bg-blue-900 w-20 sm:w-24 lg:w-32"
             >
-              <i class="fa-solid fa-headset text-8xl text-white"></i>
+              <i
+                class="fa-solid fa-headset text-5xl sm:text-6xl lg:text-8xl text-white"
+              ></i>
             </div>
             <div
               class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
             >
-              <h2 class="text-xl font-bold text-blue-900 mb-2">
+              <h2 class="text-lg sm:text-xl font-bold text-blue-900 mb-2">
                 All-round Support
               </h2>
-              <p class="text-lg text-blue-900">
+              <p class="text-sm sm:text-base text-blue-900">
                 Our team is ready to support you at every step of the way.
               </p>
             </div>
           </div>
-          <!-- three -->
-          <div class="flex mb-6">
+          <!-- Three -->
+          <div class="flex items-stretch">
             <div
-              class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
+              class="flex items-center justify-center rounded-s-xl bg-blue-900 w-20 sm:w-24 lg:w-32"
             >
-              <i class="fa-solid fa-truck-fast text-8xl text-white"></i>
+              <i
+                class="fa-solid fa-truck-fast text-5xl sm:text-6xl lg:text-8xl text-white"
+              ></i>
             </div>
             <div
               class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
             >
-              <h2 class="text-xl font-bold text-blue-900 mb-2">
+              <h2 class="text-lg sm:text-xl font-bold text-blue-900 mb-2">
                 Fast Delivery
               </h2>
-              <p class="text-lg text-blue-900">
+              <p class="text-sm sm:text-base text-blue-900">
                 We value your time and ensure swift completion of tasks.
               </p>
             </div>
           </div>
-          <!-- four -->
-          <div class="flex mb-6">
+          <!-- Four -->
+          <div class="flex items-stretch">
             <div
-              class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
+              class="flex items-center justify-center rounded-s-xl bg-blue-900 w-20 sm:w-24 lg:w-32"
             >
-              <i class="fa-solid fa-award text-8xl text-white"></i>
+              <i
+                class="fa-solid fa-award text-5xl sm:text-6xl lg:text-8xl text-white"
+              ></i>
             </div>
             <div
               class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
             >
-              <h2 class="text-xl font-bold text-blue-900 mb-2">
+              <h2 class="text-lg sm:text-xl font-bold text-blue-900 mb-2">
                 100% Guarantee
               </h2>
-              <p class="text-lg text-blue-900">
+              <p class="text-sm sm:text-base text-blue-900">
                 We stand by the quality of our work with a complete satisfaction
                 guarantee.
               </p>
             </div>
           </div>
-          <!-- five -->
-          <div class="flex mb-6">
+          <!-- Five -->
+          <div class="flex items-stretch">
             <div
-              class="flex justify-center items-center rounded-s-xl bg-blue-900 w-32"
+              class="flex items-center justify-center rounded-s-xl bg-blue-900 w-20 sm:w-24 lg:w-32"
             >
-              <i class="fa-solid fa-user-group text-8xl text-white"></i>
+              <i
+                class="fa-solid fa-user-group text-5xl sm:text-6xl lg:text-8xl text-white"
+              ></i>
             </div>
             <div
               class="bg-white flex-1 p-5 border-2 border-blue-900 rounded-e-xl shadow-lg"
             >
-              <h2 class="text-xl font-bold text-blue-900 mb-2">
+              <h2 class="text-lg sm:text-xl font-bold text-blue-900 mb-2">
                 Highly Dedicated Team
               </h2>
-              <p class="text-lg text-blue-900">
+              <p class="text-sm sm:text-base text-blue-900">
                 Our passionate team ensures every project is executed
                 flawlessly.
               </p>
             </div>
           </div>
-          
           <div class="hidden lg:block">
             <a href="index.html">
               <button
@@ -312,8 +327,8 @@
                 <i class="fa-solid fa-arrow-up"></i>
               </button>
             </a>
-
-            <a href="#team">
+          
+            <a href="#testimonial-container">
               <button
                 class="bg-blue-900 text-white text-5xl p-5 mb-6 rounded-xl transition transform hover:bg-blue-700 hover:scale-110 focus:outline-none focus:ring-4 focus:ring-blue-300"
               >
@@ -324,6 +339,7 @@
         </div>
       </div>
     </div>
+
     <!-- Team -->
     <div id="team">
       <h1
