--- a/about.html
+++ b/about.html
@@ -101,11 +101,9 @@
     >
       <div class="absolute inset-0 bg-black bg-opacity-50"></div>
       <div class="relative py-32 text-white">
-        <p
-          class="text-center sm:text-4xl md:text-5xl font-bold leading-relaxed"
-        >
-          ABOUT US
-        </p>
+        <h1 class=" text-white text-5xl text-center font-extrabold">
+About Us        </h1>
+       #
       </div>
     </div>
     <!-- About -->
