--- a/services.html
+++ b/services.html
@@ -276,55 +276,55 @@
     <!-- Clients Section -->
     <div class="bg-blue-600 px-4 py-16">
       <!-- Section Title -->
-      <h1 class="text-3xl text-white font-bold mb-5 text-center">
+      <h1 class="text-3xl sm:text-4xl text-white font-bold mb-5 text-center">
         Our Esteemed Clients
       </h1>
 
       <!-- Client Logos Grid -->
-      <div class="py-10 px-6 rounded-lg mx-32">
+      <div class="py-10 px-4 sm:px-10 lg:px-32">
         <div
-          class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-8 gap-8 items-center"
+          class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 xl:grid-cols-8 gap-6 items-center"
         >
           <!-- Client Logos -->
           <img
             src="images/client 1.png"
             alt="Client 1"
-            class="h-20 mx-auto object-contain"
+            class="h-24 sm:h-28 mx-auto object-contain transition-transform transform hover:scale-110"
           />
           <img
             src="images/c-2.png"
             alt="Client 2"
-            class="h-20 mx-auto object-contain"
+            class="h-24 sm:h-28 mx-auto object-contain transition-transform transform hover:scale-110"
           />
           <img
             src="images/c3.png"
             alt="Client 3"
-            class="h-20 mx-auto object-contain"
+            class="h-24 sm:h-28 mx-auto object-contain transition-transform transform hover:scale-110"
           />
           <img
             src="images/c4.png"
             alt="Client 4"
-            class="h-20 mx-auto object-contain"
+            class="h-24 sm:h-28 mx-auto object-contain transition-transform transform hover:scale-110"
           />
           <img
             src="images/c5.png"
             alt="Client 5"
-            class="h-20 mx-auto object-contain"
+            class="h-24 sm:h-28 mx-auto object-contain transition-transform transform hover:scale-110"
           />
           <img
             src="images/c6.png"
             alt="Client 6"
-            class="h-20 mx-auto object-contain"
+            class="h-24 sm:h-28 mx-auto object-contain transition-transform transform hover:scale-110"
           />
           <img
             src="images/c7.png"
             alt="Client 7"
-            class="h-20 mx-auto object-contain"
+            class="h-24 sm:h-28 mx-auto object-contain transition-transform transform hover:scale-110"
           />
           <img
             src="images/c8.png"
             alt="Client 8"
-            class="h-20 mx-auto object-contain"
+            class="h-24 sm:h-28 mx-auto object-contain transition-transform transform hover:scale-110"
           />
         </div>
       </div>
